samples/nathan-auth/bookinfo-authz/ratings-keycloak.yaml
# Allow both the products reviews to get data (for the bookinfo page to work)
# and for external users with verified tokens

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "ratings-keycloak-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: ratings
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/bookinfo-reviews"]
    to:
    - operation:
        methods: ["GET"]
  - from:
    - source:
       requestPrincipals: ["http://localhost:8080/auth/realms/devops-test-realm/*"]
    to:
    - operation:
        methods: ["GET"]
        paths: ["/healthz/*"]
    when:
    - key: request.auth.claims[clientId]
      values: ["devopdays-bham"]
